<resources>
    <string name="app_name">Login</string>
    <string name="password">Password</string>
    <string name="username">username</string>
    <string name="error_while_logging_in">Error while logging in</string>
    <string name="name">Username</string>
    <string name="email">Email</string>
    <string name="fetch_user">fetch user</string>
    <string name="confirm">Confirm</string>
    <string name="leave_a_comment"><u>Leave a comment</u></string>
    <string name="recipes"><b>Recipes</b></string>
</resources>