<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_form_signup"
    android:background="@color/white">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="216dp"
        android:layout_gravity="bottom"
        android:src="@drawable/login_footer2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Sign Up"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Already a member?" />

            <TextView
                android:id="@+id/tv_login_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:text="LOGIN"
                android:textColor="#EF9695" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:drawableRight="@drawable/ic_user"
            android:drawableTint="#53B7F5"
            android:hint="Username" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/ic_email"
            android:drawableTint="#53B7F5"
            android:hint="Email"
            android:inputType="textEmailAddress"
            android:paddingRight="8dp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/ic_lock"
            android:drawableTint="#53B7F5"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <!--<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="Forget password?" />

            <CheckBox
                android:id="@+id/cb_remember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="Remember me" />

        </RelativeLayout>-->

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableRight="@drawable/ic_lock"
            android:drawableTint="#53B7F5"
            android:hint="@string/confirm"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/tv_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/error_while_logging_in"
            android:layout_marginTop="10dp"
            android:textColor="@color/purple_500"
            android:visibility="gone"/>

        <ProgressBar
            android:layout_marginTop="10dp"
            android:id="@+id/pb_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="26dp"
            android:background="@drawable/my_button"
            android:clickable="true"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="sign up"
            android:textColor="@color/white" />

    </LinearLayout>

</FrameLayout>